# Ajax

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  memory.prof  pyproject.toml
.github/workflows/: ci.yml
src/ajax/: __init__.py  evaluate.py  profiling.py  state.py  types.py  utils.py  wrappers.py
src/ajax/agents/: base.py
src/ajax/agents/AVG/: AVG.py  state.py  train_AVG.py  utils.py
src/ajax/agents/exploration/: rnd.py  train_sac_with_bonus.py
src/ajax/agents/sac/: minimal.py  sac.py  state.py  train_sac.py  utils.py
src/ajax/buffers/: utils.py
src/ajax/environments/: create.py  interaction.py  utils.py
src/ajax/logging/: wandb_logging.py
src/ajax/networks/: networks.py  scanned_rnn.py  utils.py
tests/: test_evaluate.py  test_utils.py
tests/agents/AVG/: test_AVG.py  test_AVG_utils.py  test_train_AVG.py
tests/agents/sac/: test_sac.py  test_sac_utils.py  test_train_sac.py
tests/buffers/: test_buffers_utils.py
tests/environments/: test_create.py  test_environment_utils.py  test_interaction.py  test_utils.py  test_wrappers.py
tests/logging/: test_wandb_logging.py
tests/networks/: test_network_utils.py  test_networks.py
tests/state/: test_train_state.py
