[tool.poetry]
name = "Ajax"
version = "0.2.0"
description = "RL agents in jax"
authors = ["Yann Berthelot <yannberthelot1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
gymnasium = "^0.28.1"
numpy = "^1.25.0"
tqdm = "^4.65.0"
gymnax = {git = "https://github.com/YannBerthelot/gymnax.git"}
appdirs = "1.4.3"
pydantic = "^2.0.2"
wandb = "^0.15.8"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
jaxlib = "0.4.25"
jax = "0.4.25"
distrax = "^0.1.5"
flax = ">=0.8"
scipy = "<1.13"
probing-environments = {git = "https://github.com/YannBerthelot/ProbingEnvironments.git"}
flashbax = "^0.1.3"


[tool.poetry.group.dev.dependencies]
black = "23.3.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"
pytest = "7.4.0"
tox = "^4.6.4"
coverage = {extras = ["toml"], version = "^7.8.0"}
pygame = "^2.5.2"
pytest-mock = "^3.14.0"
mock = "^5.1.0"
ruff = "^0.11.6"


[tool.poetry.group.render.dependencies]
moviepy = "^1.0.3"
imageio = {extras = ["ffmpeg"], version = "^2.37.0"}


[tool.poetry.group.mujoco.dependencies]
brax = "^0.10.3"
mujoco = "^3.1.4"
mujoco-mjx = "^3.1.4"


[tool.poetry.group.profiling.dependencies]
tensorflow = "^2.19.0"
tensorboard = "^2.19.0"
tensorboard-plugin-profile = "^2.19.4"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"


[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[tool.black]
line-length = 88
preview = true
verbose = true

[tool.ruff]
line-length = 88
fix = true
src = ["src", "tests"]

[tool.ruff.lint]
select =  ["I", "F", "E", "W", "B", "C", "RUF"]
ignore = ["E501"]
fixable = ["ALL"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
# ClassVar, implicit optional check not needed for tests
"./tests/*.py" = ["RUF012", "RUF013"]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 15


[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
show_error_codes = true
disable_error_code = ["attr-defined" ,"call-arg","misc"]
exclude = """(?x)(
    tests/test_logger.py$
    | tests/test_train_eval_mode.py$
  )"""



[tool.pytest.ini_options]
norecursedirs = ["tests/classical/*", "tests/recurrent/*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
branch = true


[tool.coverage.report]
omit = [ "tests/*"]
ignore_errors = true    
fail_under = 80

exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    ]

[build-system]
requires = ["poetry-core","poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend =  "poetry_dynamic_versioning.backend"
